--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
   mongoUrl = mongodb+srv://rahul:kushwah@cluster0.46gecm5.mongodb.net/emicalculator?retryWrites=true&w=majority
 
+
+  # mongoUrl = https://alive-wasp-tux.cyclic.app
+
   PORT = "8080"
